# matlab-action-test

./: CMakeLists.txt  README.md  script.m  sumScalar.c  testSumScalar.m
.github/workflows/: run-matlab.yml
